WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103576
Absolutely positioned non-replaced elements should resolve vertical margins against their containing block's logical width
https://bugs.webkit.org/show_bug.cgi?id=103576
Summary
Absolutely positioned non-replaced elements should resolve vertical margins a...
Bear Travis
Reported
2012-11-28 16:47:51 PST
http://www.w3.org/TR/CSS2/box.html#margin-properties
http://dev.w3.org/csswg/css3-writing-modes/#dimension-mapping
This will need to be fixed for replaced elements as well.
Attachments
Initial patch
(23.61 KB, patch)
2012-11-29 14:47 PST
,
Bear Travis
no flags
Details
Formatted Diff
Diff
Simplifying patch
(12.22 KB, patch)
2012-12-03 15:04 PST
,
Bear Travis
no flags
Details
Formatted Diff
Diff
Fixing build
(12.22 KB, patch)
2012-12-03 15:49 PST
,
Bear Travis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Bear Travis
Comment 1
2012-11-29 14:47:40 PST
Created
attachment 176822
[details]
Initial patch Includes some updates to line indentation to make the style checker happy
Bear Travis
Comment 2
2012-12-03 15:04:17 PST
Created
attachment 177342
[details]
Simplifying patch Rewording the changelog to be more descriptive, minimizing the patch footprint, and moving to js-style tests.
Early Warning System Bot
Comment 3
2012-12-03 15:32:44 PST
Comment on
attachment 177342
[details]
Simplifying patch
Attachment 177342
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/15097737
Early Warning System Bot
Comment 4
2012-12-03 15:42:45 PST
Comment on
attachment 177342
[details]
Simplifying patch
Attachment 177342
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/15104692
Bear Travis
Comment 5
2012-12-03 15:49:16 PST
Created
attachment 177357
[details]
Fixing build
WebKit Review Bot
Comment 6
2012-12-04 12:13:41 PST
Comment on
attachment 177357
[details]
Fixing build Rejecting
attachment 177357
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ripts/update-webkit line 152. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource From
http://git.chromium.org/external/Webkit
8b8f204..9cffc45 HEAD -> origin/HEAD error: Ref refs/remotes/origin/master is at 9cffc451c10239895188285fa8cdb2dbd36f385d but expected 8b8f204b56b60ddd016afb9099b92163ce73004b ! 8b8f204..9cffc45 master -> origin/master (unable to update local ref) Died at Tools/Scripts/update-webkit line 152. Full output:
http://queues.webkit.org/results/15157006
WebKit Review Bot
Comment 7
2012-12-04 12:36:31 PST
Comment on
attachment 177357
[details]
Fixing build Rejecting
attachment 177357
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ripts/update-webkit line 152. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource From
http://git.chromium.org/external/Webkit
a0bd058..e9d9059 HEAD -> origin/HEAD error: Ref refs/remotes/origin/master is at e9d90592d3ba8ebe3e8a5ae811eea04f2940e996 but expected a0bd0584a2eb25a8bb88b2de129e3453f2ab97d7 ! a0bd058..e9d9059 master -> origin/master (unable to update local ref) Died at Tools/Scripts/update-webkit line 152. Full output:
http://queues.webkit.org/results/15120956
WebKit Review Bot
Comment 8
2012-12-04 19:58:19 PST
Comment on
attachment 177357
[details]
Fixing build Rejecting
attachment 177357
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ripts/update-webkit line 152. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource From
http://git.chromium.org/external/Webkit
4c9966d..c0a4c3a HEAD -> origin/HEAD error: Ref refs/remotes/origin/master is at c0a4c3a40ce96884ae4c1472ef9d4edf6af9b111 but expected 4c9966dabd73e7df4d0cfc1858ece45aeb05b888 ! 4c9966d..c0a4c3a master -> origin/master (unable to update local ref) Died at Tools/Scripts/update-webkit line 152. Full output:
http://queues.webkit.org/results/15160028
Eric Seidel (no email)
Comment 9
2012-12-04 23:43:43 PST
Comment on
attachment 177357
[details]
Fixing build I believe abarth has fixed the cq for now.
WebKit Review Bot
Comment 10
2012-12-05 00:03:42 PST
Comment on
attachment 177357
[details]
Fixing build Clearing flags on attachment: 177357 Committed
r136646
: <
http://trac.webkit.org/changeset/136646
>
WebKit Review Bot
Comment 11
2012-12-05 00:03:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug